# pmem-manager

./: .clang-tidy  CMakeLists.txt  README.md
.github/workflows/: unit_tests.yaml
include/pmem/memory/: epoch_based_gc.hpp  utility.hpp
include/pmem/memory/component/: garbage_list_in_dram.hpp  garbage_list_in_pmem.hpp  list_header.hpp  tls_fields.hpp
src/: utility.cpp
src/component/: garbage_list_in_dram.cpp  garbage_list_in_pmem.cpp  tls_fields.cpp
test/: CMakeLists.txt  epoch_based_gc_test.cpp  list_header_test.cpp  pmem_env.hpp
